<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="banner_ad_unit_id">ca-app-pub-4104794849108440/2480123779</string>
    <string name="app_name">PantipFanApp</string>
    <string name="date_format">MM/dd/yyyy HH:mm:ss</string>
    <string name="comment">ความเห็น</string>
    <string name="vote">โหวต</string>
    <string name="drawer_open">Menu</string>
    <string name="drawer_close">Pantip Fan App</string>
    <string name="recomend_topic">กระทู้แนะนำ</string>
    <string name="topic_in_forum">กระทู้ในห้อง</string>
    <string name="view_all">ดูทั้งหมด</string>


    <string name="action_sort_topic">เรียงกระทู้</string>
    <string name="action_sort_comment">เรียงความเห็น</string>
    <string name="action_fav">เก็บเข้ากระทู้โปรด</string>
    <string name="action_unfav">เอาออกจากกระทู้โปรด</string>
    <string name="topic_sort_type_title">เรียงกระทู้ตาม</string>
    <string name="comment_sort_type_title">เรียงความเห็นตาม</string>
    <string name="action_save">บันทึก</string>
    <string name="feedback_save_arrange_done">บันทึกลำดับเสร็จสิ้น</string>
    <string name="feedback_save_arrange_inprogress">กำลังบันทึก</string>
    <string name="enable_room">แสดง</string>
    <string name="username">อีเมล / นามแฝง</string>
    <string name="password">รหัสผ่าน</string>
    <string name="login">เข้าใช้งาน</string>
    <string name="feedback_login_failed">ไม่พบนามแฝง / อีเมลนี้ หรือรหัสผ่านผิด โปรดลองใหม่อีกครั้ง</string>
    <string name="logout">ออกจากระบบ</string>
    <string name="feedback_loading_login">กำลังเข้าสู่ระบบ</string>
    <string name="feedback_connection_failed">การเชื่อมต่อมีปัญหา โปรดตรวจสอบ Internet</string>
    <string name="please_wait">โปรดรอซักครู่</string>

    <string name="share_title">กระทู้น่าสนใจ</string>
    <string name="share_text">%1$s | %2$s via #PantipFanApp</string>
    <string name="share_prompt">แชร์กระทู้ ใน...</string>
    <string name="action_share">แชร์</string>
    <string name="action_open_browser">ดูบน Browser</string>
    <string name="add_comment">เพิ่มความเห็น</string>
    <string name="no_comment">ยังไม่มีความเห็น</string>
    <string name="feedback_comment_success">แสดงความเห็นเสร็จสิ้น</string>
    <string name="feedback_comment_failed">คุณได้แสดงแล้ว กรุณารอ 5 วินาที ก่อนแสดงความเห็นใหม่</string>
    <string name="hint_comment">แสดงความคิดเห็น</string>
    <string name="reply_comment_prefix"><![CDATA[<B>ตอบ คห. %d -> </B>]]></string>
    <string name="action_view_tag">ดูแท็ก</string>
    <string name="action_topic_type">เลือกประเภทกระทู้</string>
    <string name="title_tags_dialog">เลือกแท็ก</string>
    <string name="action_view_club">ดูคลับ</string>
    <string name="title_topic_type_dialog">เลือกประเภทกระทู้</string>
    <string name="title_club_dialog">เลือกคลับ</string>
    <string name="empty_string"></string>

    <array name="topic_sort_type">
        <item>จำนวนความเห็น</item>
        <item>จำนวนโหวต</item>
        <item>เวลา</item>
    </array>
    <array name="comment_sort_type">
        <item>จำนวนโหวต</item>
        <item>จำนวนการแสดงอารมณ์</item>
        <item>ลำดับ</item>
    </array>
    <array name="topic_type">
        <item>กระทู้ทั้งหมด ยกเว้นขายของ</item>
        <item>กระทู้คำถาม</item>
        <item>กระทู้สนทนา</item>
        <item>กระทู้โพล</item>
        <item>กระทู้รีวิว</item>
        <item>กระทู้ข่าว</item>
        <item>กระทู้ขายของ</item>
    </array>
    <string name="title_emo_dialog">แสดงอารมณ์</string>
    <string name="feedback_emo_success">แสดงอารมณ์เรียบร้อยแล้ว</string>
    <string name="feedback_emo_failed">ไม่สามารถทำการแสดงอารมณ์ได้ โปรดลองอีกครั้ง</string>
    <string name="feecback_waiting_forumpart_load">กำลังโหลดข้อมูลห้อง กรุณาลองใหม่ภายหลัง</string>
    <string name="feedback_connection_failed_short">การเชื่อมต่อมีปัญหา</string>
    <string name="retry">ลองใหม่</string>
    <string name="action_story_mode">อ่านเฉพาะข้อความเจ้าของกระทู้</string>
    <string name="action_all_comment_mode">อ่านความคิดเห็นทั้งหมด</string>
    <array name="emo_type">
        <item>ถูกใจ</item>
        <item>ขำกลิ้ง</item>
        <item>หลงรัก</item>
        <item>ซึ้ง</item>
        <item>สยอง</item>
        <item>ทึ่ง</item>
    </array>
</resources>
