<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/action_share"
            android:icon="@drawable/ic_action_share"
            android:title="@string/action_share"
            app:showAsAction="always"/>
    <item
        android:id="@+id/action_fav"
        android:title="@string/action_fav"
        android:icon="@drawable/ic_action_toggle_star_outline"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_unfav"
        android:title="@string/action_unfav"
        android:icon="@drawable/ic_action_toggle_star"
        app:showAsAction="always"/>
    <item
            android:id="@+id/action_sort_comment"
            android:title="@string/action_sort_comment"
            android:icon="@drawable/ic_action_sort"
            app:showAsAction="always"/>

    <item
        android:id="@+id/action_story_mode"
        android:title="@string/action_story_mode"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_all_comment_mode"
        android:title="@string/action_all_comment_mode"
        app:showAsAction="never"/>
    <item
            android:id="@+id/action_open_browser"
            android:title="@string/action_open_browser"
            app:showAsAction="never"/>


</menu>