<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:clickable="true"

             android:layout_height="match_parent">

    <LinearLayout
            android:id="@+id/loginPane"
            android:orientation="vertical"
            android:padding="@dimen/screen_width_padding_extra"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/username"
                android:id="@+id/textView"/>

        <EditText
                style="@style/PantipWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/username"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/password"
                android:id="@+id/textView2"/>

        <EditText
                style="@style/PantipWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/password"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_extra"
                android:text="@string/login"
                android:id="@+id/login"
                android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:linksClickable="true"
            android:layout_marginTop="16dp"
            android:autoLink="web"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="กรณี Login ไม่ได้ ให้ลองไป Login/Logout ที่หน้าเวป http://www.pantip.com/login/authentication ให้ผ่าน จนกรอก Capcha สำเร็จ"
            android:id="@+id/help1" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:linksClickable="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="ให้ทดลองพิมพ์ อีเมล/นามแฝง ด้วยตัวอย่างทั้งหมด อย่าใช้ตัวช่วยสะกดคำของคีย์บอร์ด"
            android:id="@+id/help2" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/userPane"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical">

        <ImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:id="@+id/avatar"
                android:src="@drawable/ic_launcher_pantip"
                android:layout_gravity="center_horizontal"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Large Text"
                android:id="@+id/usernameTxt"
                android:layout_marginTop="@dimen/padding_extra"


                android:layout_gravity="center_horizontal"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:layout_marginTop="@dimen/padding_extra"
                android:id="@+id/logout"
                android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</FrameLayout>